Changes in ProfileController, profile-dashboard.component.ts,profile-edit.html,ProfileRepository,IProfileRepository,,profile.component.ts,profile.module.ts,profile.routin.ts,profile.service.ts,app.html,startup.cs

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/app.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/app.html
@@ -33,4 +33,5 @@
     <div class="main-content">
         <router-outlet></router-outlet>
     </div>
+    <footer>Copyright &copy;2017 Promact Infotech Pvt. Ltd. All Rights Reserved.</footer>
 </div>
