--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-edit/profile-edit.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-edit/profile-edit.html
@@ -27,7 +27,7 @@
         </div>
         <div class="actions-area">
           <button type="button" class="btn" [routerLink]="['/profile']">Cancel</button>
-          <button type="submit" class="btn btn-primary" (click)="UpdateUserDetails()">Save Changes</button>
+          <button type="submit" class="btn btn-primary" (click)="updateUserDetails()">Save Changes</button>
         </div>
       </form>
     </div>
