set method name in Pascal Case change local variable name  in questions-dashboard.html file

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -15,12 +15,12 @@
                 </div>
                 <ul class="category-list">
                     <li class="active h5">All Questions</li>
-                    <li *ngFor="let cat of categoryName"class="clearfix h5">
-                        {{cat}}
+                    <li *ngFor="let category of categoryName"class="clearfix h5">
+                        {{category}}
                         <i class="material-icons pull-right" [mdMenuTriggerFor]="categoryMenu">more_vert</i>
                         <md-menu #categoryMenu="mdMenu" [overlapTrigger]="false" x-position="before">
                             <button md-menu-item>Rename</button>
-                            <button md-menu-item  (click)="deleteCategoryDialog(cat)">Delete</button>
+                            <button md-menu-item  (click)="deleteCategoryDialog(category)">Delete</button>
                         </md-menu>
                     </li>
                 </ul>
