--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-launch-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-launch-dialog.html
@@ -7,13 +7,13 @@
         <div class="form-group">
             <label class="h4">Global URL</label>
             <div class="url-container">
-                <input type="url" class="form-control" value="http://quizapp.com/adAe2y78" />
-                <i class="material-icons">content_copy</i>
+                <input type="text" class="form-control" [(ngModel)]="settingObject.link" name="Test Link"/>
+                <i class="material-icons" ngxClipboard [cbContent]="settingObject.link" (cbOnSuccess)="isCopied1 = true">content_copy</i>
             </div>
         </div>
     </div>
     <div class="dialog-actions">
         <button type="button" class="btn" md-dialog-close>Close</button>
-        <button type="submit" class="btn btn-primary">Copy</button>
+        <button type="submit" class="btn btn-primary" [class.btn-success]="isCopied1" ngxClipboard [cbContent]="settingObject.link" (cbOnSuccess)="isCopied1 = true">Copy</button>
     </div>
 </div>
