Added  logOut function in  and  formatted the files

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/profile-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/profile-dashboard.html
@@ -1,5 +1,4 @@
-﻿
-<div class="container">
+﻿<div class="container">
   <div class="userprofile">
     <div class="title-area">
       <h1>Profile <a href="#" [routerLink]="['edit']"><i class="material-icons">mode_edit</i></a></h1>
