--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-answer/questions-single-answer.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-single-answer/questions-single-answer.html
@@ -1,57 +1,83 @@
-﻿<div class="container">
+﻿
+<div class="container">
     <div class="question-type">
         <div class="header">
             <h2>Question</h2>
-            <h5>Single Answer Question</h5>          
+            <h5>Single Answer Question</h5>
         </div>
-        <form>
+        <form (ngSubmit)="SingleQuestionAnswerAdd(singleAnswerQuestion)">
             <div class="form-fields">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Question Test"  [(ngModel)]="singleAnswerQuestion.singleMultipleAnswerQuestion.questionDetail" [ngModelOptions]="{standalone: true}"/>
+                <div>
+                    <input type="text" class="form-control" placeholder="Question Test" [(ngModel)]="singleAnswerQuestion.singleMultipleAnswerQuestion.questionDetail" id="question" #question="ngModel" [ngModelOptions]="{standalone: true}" required="ABC" />
+                    <span *ngIf="display">
+                        <span *ngIf="question.invalid" class="alert-danger">Question field is required</span>
+                    </span>
                 </div>
                 <div class="form-group answer-choices">
                     <md-radio-group [(ngModel)]="value" name="first">
-                        {{value}}
                         <md-radio-button value="0">
-                            <input type="text" class="form-control" placeholder="Answer Choice 1"[(ngModel)]="singleAnswerQuestion.singleMultipleAnswerQuestionOption[0].option" [ngModelOptions]="{standalone: true}"/>
-                            <i class="material-icons">close</i>
-                        </md-radio-button>   
+                            <input type="text" class="form-control" placeholder="Answer Choice 1" [(ngModel)]="singleAnswerQuestion.singleMultipleAnswerQuestionOption[0].option" id="option1" #option1="ngModel" [ngModelOptions]="{standalone: true}" required />
+                            <i class="material-icons">close</i><br />
+                            <span *ngIf="display">
+                                <span *ngIf="option1.invalid" class="alert-danger">This field is required</span>
+                            </span>
+                        </md-radio-button>
                         <md-radio-button value="1">
-                            <input type="text" class="form-control" placeholder="Answer Choice 2" [(ngModel)]="singleAnswerQuestion.singleMultipleAnswerQuestionOption[1].option" [ngModelOptions]="{standalone: true}"/>
-                            <i class="material-icons">close</i>               
+                            <input type="text" class="form-control" placeholder="Answer Choice 2" [(ngModel)]="singleAnswerQuestion.singleMultipleAnswerQuestionOption[1].option" id="option2" #option2="ngModel" [ngModelOptions]="{standalone: true}" required />
+                            <i class="material-icons">close</i><br />
+                            <span *ngIf="display">
+                                <span *ngIf="option2.invalid" class="alert-danger">This field is required</span>
+                            </span>
                         </md-radio-button>
                         <md-radio-button value="2">
-                            <input type="text" class="form-control" placeholder="Answer Choice 3"  [(ngModel)]="singleAnswerQuestion.singleMultipleAnswerQuestionOption[2].option" [ngModelOptions]="{standalone: true}" />
-                            <i class="material-icons">close</i>
+                            <input type="text" class="form-control" placeholder="Answer Choice 3" [(ngModel)]="singleAnswerQuestion.singleMultipleAnswerQuestionOption[2].option" id="option3" #option3="ngModel" [ngModelOptions]="{standalone: true}" required />
+                            <i class="material-icons">close</i><br />
+                            <span *ngIf="display">
+                                <span *ngIf="option3.invalid" class="alert-danger">This field is required</span>
+                            </span>
                         </md-radio-button>
                         <md-radio-button value="3">
-                            <input type="text" class="form-control" placeholder="Answer Choice 4" [(ngModel)]="singleAnswerQuestion.singleMultipleAnswerQuestionOption[3].option" [ngModelOptions]="{standalone: true}" />
-                            <i class="material-icons">close</i>
+                            <input type="text" class="form-control" placeholder="Answer Choice 4" [(ngModel)]="singleAnswerQuestion.singleMultipleAnswerQuestionOption[3].option" id="option4" #option4="ngModel" [ngModelOptions]="{standalone: true}" required />
+                            <i class="material-icons">close</i><br />
+                            <span *ngIf="display">
+                                <span *ngIf="option4.invalid" class="alert-danger">This field is required</span>
+                            </span>
                         </md-radio-button>
                         <md-radio-button value="4" [disabled]="true">
                             <input type="text" class="form-control" placeholder="Add Choice" disabled />
                         </md-radio-button>
                     </md-radio-group>
+                    <span *ngIf="display">
+                        <span *ngIf="!isOptionSelected" class="alert-danger">Please select your answer</span>
+                    </span>
                     <p class="tip">Tip: Click the radio button to mark the correct answer</p>
                 </div>
-                <div class="form-inline clearfix">
+                <div class="form-fields">
                     <div class="form-group col-md-4 col-sm-4 pl0">
                         <select class="form-control" [(ngModel)]="singleAnswerQuestion.singleMultipleAnswerQuestion.category.categoryName" [ngModelOptions]="{standalone: true}">
+                            <option>Select Category</option>
                             <option *ngFor="let category of categoryName">{{category}}</option>
                         </select>
-                 
+                        <span *ngIf="display">
+                            <span *ngIf="!isCategorySelected" class="alert-danger">Select category</span>
+                        </span>
                     </div>
                     <div class="form-group col-md-2 col-sm-2 pl0">
                         <select class="form-control" [(ngModel)]="singleAnswerQuestion.singleMultipleAnswerQuestion.difficultyLevel" [ngModelOptions]="{standalone: true}">
-                            <option *ngFor="let type of questionType" [selected]="type =='Easy'">{{type}}</option>
-                        </select>                      
+                            <option>Select Difficulty</option>
+                            <option *ngFor="let type of questionType">{{type}}</option>
+                        </select>
+                        <span *ngIf="display">
+                            <span *ngIf="!isDifficultyLevelSelected" class="alert-danger">Select difficulty level</span>
+                        </span>
                     </div>
                 </div>
             </div>
             <div class="actions-area">
                 <button type="button" class="btn">Cancel</button>
-                <button type="button" class="btn btn-primary" (click)="SingleQuestionAnswerAdd(singleAnswerQuestion)">Save</button>
+                <button type="submit" class="btn btn-primary" (click)="validate()">Save</button>
             </div>
         </form>
+
     </div>
 </div>
