--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -6,22 +6,22 @@
   <md-dialog-content>
     <div class="form-group">
       <label class="h4">Current Password</label>
-      <input type="password" class="form-control" />
+      <input type="password" class="form-control" [(ngModel)]="user.oldPassword"/>
       <div class="errors-container"></div>
     </div>
     <div class="form-group">
       <label class="h4">New Password</label>
-      <input type="password" class="form-control" />
+      <input type="password" class="form-control" [(ngModel)]="user.newPassword"/>
       <div class="errors-container"></div>
     </div>
     <div class="form-group">
       <label class="h4">Confirm Password</label>
-      <input type="password" class="form-control" />
+      <input type="password" class="form-control" [(ngModel)]="user.confirmPassword"/>
       <div class="errors-container"></div>
     </div>
   </md-dialog-content>
   <md-dialog-actions>
     <button type="button" class="btn" md-dialog-close>Cancel</button>
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary" (click)="changePassword()">Save</button>
   </md-dialog-actions>
 </div>
