--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -9,17 +9,17 @@
           <h3>LOADING...</h3>
       </div>
 
-    <form (ngSubmit)="submitForm()" novalidate [hidden]="!allContentReady">
+    <form (ngSubmit)="submitForm()" [hidden]="!allContentReady">
       <div class="form-fields">
         <div class="form-group">
           <label class="h4">Section</label>
-          <select class="form-control half-width" [(ngModel)]="selectedCategory" name="categories">
-            <option *ngFor="let category of categories">{{category}}</option>
+          <select class="form-control half-width" name="categories" (change)="selectCategory($event.target.value)" required>
+            <option *ngFor="let category of categories">{{category.categoryName}}</option>
           </select>
         </div>
         <div class="form-group">
           <label class="h4">Difficulty Level</label>
-          <select class="form-control small-width" [(ngModel)]="selectedDifficultyLevel" name="difficulty">
+          <select class="form-control small-width" [(ngModel)]="selectedDifficultyLevel" name="difficulty" required>
             <option>Easy</option>
             <option>Medium</option>
             <option>Hard</option>
@@ -27,19 +27,22 @@
         </div>
         <div class="form-group">
           <label class="h4">Question Details</label>
-          <textarea class="form-control half-width" placeholder="Question details here" rows="3" [(ngModel)]="questionDetail" name="detail"></textarea>
+          <textarea class="form-control half-width" placeholder="Question details here" rows="3" [(ngModel)]="questionDetail" name="detail" required maxlength="1000"></textarea>
         </div>
-        <div class="form-group">
+        <div class="form-group" id="codingLanguage">
           <label class="h4">Code Languages</label>
           <md-chip-list class="form-control half-width" (click)="autocomplete.focus()">
             <md-chip *ngFor="let selectedLanguage of selectedCodingLanguages">{{selectedLanguage}}<i class="material-icons" (click)="removeSelectedLanguage(selectedLanguage)">close</i></md-chip>
             <md-input-container>
-              <input mdInput placeholder="Code Languages" [(ngModel)]="languageInputText" (keyup.enter)="selectLanguage(languageInputText)" name="languageInput" [mdAutocomplete]="code" #autocomplete>
+              <input mdInput placeholder="Code Languages" [(ngModel)]="languageInputText" name="languageInput" [mdAutocomplete]="code" #autocomplete>
             </md-input-container>
             <md-autocomplete #code="mdAutocomplete">
               <md-option *ngFor="let language of codingLanguages" value="{{language}}" (click)="selectLanguage(language)">{{language}}</md-option>
             </md-autocomplete>
           </md-chip-list>
+        </div>
+        <div *ngIf="noLanguageSelected" class="alert alert-danger">
+            *Please select atleast one language
         </div>
         <div class="form-group">
           <label class="h4">Score Settings</label>
