--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-multiple-answers/questions-multiple-answers.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-multiple-answers/questions-multiple-answers.html
@@ -4,7 +4,7 @@
             <h2>Question</h2>
      
         </div>
-        <form (ngSubmit)="SingleQuestionAnswerAdd(multipleAnswerQuestion)">
+        <form (ngSubmit)="multipleQuestionAnswerAdd(multipleAnswerQuestion)">
             <div class="form-fields">
                 {{display}}
                 <div class="form-group">
@@ -62,6 +62,7 @@
                     </div>
                     <div class="form-group col-md-2 col-sm-2 pl0">
                         <select class="form-control" [(ngModel)]="multipleAnswerQuestion.singleMultipleAnswerQuestion.difficultyLevel" [ngModelOptions]="{standalone: true}">
+                            <option>Select Difficulty</option>
                             <option *ngFor="let type of questionType">{{type}}</option>
                         </select>
                         <span *ngIf="display">
