--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/rename-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/rename-category-dialog.html
@@ -6,12 +6,12 @@
     <md-dialog-content>
         <div class="form-group">
             <label class="h4">Section Name</label>
-            <input type="text" class="form-control" (keyup)="CheckDuplicateCategoryName(category.categoryName)" [(ngModel)]="category.categoryName" name="" required />
+            <input type="text" class="form-control" (keyup)="checkDuplicateCategoryName(category.categoryName)" [(ngModel)]="category.categoryName" name="" required />
             <span *ngIf="isNameExist" style="color:darkred">*Category Name Already Exists</span>
         </div>
     </md-dialog-content>
     <md-dialog-actions>
         <button type="button" class="btn" md-dialog-close>Cancel</button>
-        <button type="submit" class="btn btn-primary" [disabled]="isNameExist" (click)="categoryUpdate(category)">Update</button>
+        <button type="submit" class="btn btn-primary" [disabled]="isNameExist" (click)="updateCategory(category)">Update</button>
     </md-dialog-actions>
 </div>
