edited the comments, meaningful names checked and async and await is given wherever database is hit.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -52,7 +52,7 @@
                 <div class="qs-text">
                   <p class="question">{{q.questionDetail}}</p>
                   <div *ngFor="let o of q.singleMultipleAnswerQuestionOption; let j = index">
-                    <p *ngIf="QuestionType[q.questionType] != QuestionType[2]" [ngClass]="isCorrectAnswer(o.isAnswer)" class="ans-option "><span>{{alpha[j]}}</span> <span>{{o.option}}</span></p>
+                    <p *ngIf="QuestionType[q.questionType] != QuestionType[2]" [ngClass]="isCorrectAnswer(o.isAnswer)" class="ans-option "><span>{{optionName[j]}}</span> <span>{{o.option}}</span></p>
                   </div>
                 </div>
               </div>
