--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -106,12 +106,12 @@
         <div class="container">
             <h1 class="pull-left">
                 <span [hidden]="editName">{{testsettings.testName}}</span>
-                <input type="text" id="name" name="name" class="form-control" placeholder="Ex. Software Developer Recruitment Test"
-                       [(ngModel)]="testsettings.testName" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&_*^{}[\]\|.?-]*$" maxlength="150"
-                       [hidden]="!editName" (focus)="selectAllContent($event)" (mouseup)="$event.preventDefault()" (blur)="onBlurMethod(testsettings.id,testsettings)" />
+                <input type="text" id="name" #box (keyup)="testNameLengthChecking(box.value)" name="name" class="form-control" placeholder="Ex. Software Developer Recruitment Test"
+                       [(ngModel)]="testsettings.testName" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&_*^{}[\]\|.?-]*$" 
+                       [hidden]="!editName" (focus)="selectAllContent($event)" (mouseup)="$event.preventDefault()" (blur)="onBlurMethod(testsettings.id,testsettings,box.value)" />
                 <span class="error-msg" *ngIf="name.errors && (name.dirty || name.touched)" [hidden]="!name.errors.required">Name is required</span>
                 <span class="error-msg" *ngIf="name.errors && (name.touched || name.pristine || name.untouched)" [hidden]="!name.errors.pattern">Enter valid Test Name</span>
-
+                <span class="error-msg" *ngIf="testLength">Test Name should not exceed 150 characters</span>
                 <i class="material-icons" (click)="editName = !editName">edit</i>
             </h1>
             <button type="button" class="btn btn-primary pull-right"><i class="material-icons">remove_red_eye</i> Preview</button>
@@ -130,14 +130,17 @@
             </div>
             <div class="form-group inline-field">
                 <label class="h4">End Date & Time</label>
-                <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.endDate" name="End Date"/>
+                <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.endDate" name="End Date" (mouseup)="validEndDateChecking(testsettings.endDate)"/>
+                <span class="error-msg" *ngIf="validEndDate">End date must be greater</span>
             </div>
             <div class="form-group ip-restrictions-field">
                 <label class="h4">IP Restrictions</label>
                 <br />
-                <input type="text" class="form-control small-width" placeholder="From IP" [(ngModel)]="testsettings.fromIpAddress" name="From IP Address" required pattern="((^|\.)((25[0-5])|(2[0-4]\d)|(1\d\d)|([1-9]?\d))){4}$"/>
-                <input type="text" class="form-control small-width" placeholder="To IP" [(ngModel)]="testsettings.toIpAddress" name="To Ip Address" required pattern="((^|\.)((25[0-5])|(2[0-4]\d)|(1\d\d)|([1-9]?\d))){4}$"/>
-            </div>
+                <input type="text" class="form-control small-width" id="From" name="From" placeholder="From IP" #From=ngModel [(ngModel)]="testsettings.fromIpAddress"  required pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+                <span class="error-msg" *ngIf="From.errors && (From.touched || From.pristine || From.untouched)" [hidden]="!From.errors.pattern">Enter IP Address in correct format</span>
+                <input type="text" class="form-control small-width" id="To" name="To" placeholder="To IP" [(ngModel)]="testsettings.toIpAddress" #To=ngModel  required pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$"/>
+                <span class="error-msg" *ngIf="To.errors && (To.untouched || To.pristine || To.dirty)" [hidden]="!To.errors.pattern">Enter IP Address in valid format</span>
+              </div>
             <div class="form-group">
                 <label class="h4">Browser Tolerance</label>
                 <select class="form-control half-width" [(ngModel)]="testsettings.browserTolerance" name="Browser Tolerance">
@@ -175,9 +178,9 @@
             </div>
             <div class="form-group">
                 <label class="h4">Warning Message</label>
-                <textarea class="form-control half-width" rows="3" placeholder="Your message here" [(ngModel)]="testsettings.warningMessage" name="Warning Message"></textarea>
-                <span class="error-msg">Message cannot contain more than 255 characters</span>
-            </div>
+                <textarea class="form-control half-width" rows="3" #textarea placeholder="Your message here" [(ngModel)]="testsettings.warningMessage" name="Warning Message"  (keyup)="messageLengthChecking(textarea.value)"></textarea>
+                <span *ngIf="messageLength" class="error-msg">Message cannot be more than 255 characters</span>
+          </div>
             <div class="form-group">
                 <label class="h4">Warning Time (mins)</label>
                 <input type="number" class="form-control small-width" placeholder="00" [(ngModel)]="testsettings.warningTime" name="Warning Time" min="0"/>
